--- a/02장 자료형/ch2.ipynb
+++ b/02장 자료형/ch2.ipynb
@@ -12,6 +12,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "> Q1    \n",
     "``` py\n",
@@ -22,6 +27,126 @@
     "    영어\t75\n",
     "    수학\t55   \n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "평균은 70.0 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "kor = 80\n",
+    "eng = 75\n",
+    "math = 55\n",
+    "# 왼쪽 = 오른쪽\n",
+    "t = kor+eng+math\n",
+    "a = t/3\n",
+    "print(\"평균은\", a, \"입니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "avg =  70.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type([]))\n",
+    "subjects = [80, 75, 55]\n",
+    "total = subjects[0] + subjects[1] + subjects[2]\n",
+    "#오버라이딩 : 재정의한다\n",
+    "avg = total / len(subjects)\n",
+    "# len(\"abcd\") == 4. 글자가 4개\n",
+    "print(\"avg = \",avg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "avg =  73.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "subjects = [80, 75, 55, 80, 75]\n",
+    "# help(subjects) : 설명을 볼 수 있다.\n",
+    "total = sum(subjects)\n",
+    "avg = total / len(subjects) # len(subjects) 몇개인지 세어준다\n",
+    "print(\"avg = \", avg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "avg =  70.0\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "subjects = {\"kor\":80, \"eng\":75, \"math\":55}\n",
+    "total = subjects[\"kor\"] + subjects[\"eng\"] + subjects[\"math\"]\n",
+    "avg = total / len(subjects)\n",
+    "print(\"avg = \", avg)\n",
+    "# subjects[\"kor\"]\n",
+    "# subjects[\"eng\"]\n",
+    "# subjects[\"math\"]\n",
+    "# print(type({})) == <class 'dict'>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "노민정 님의 총점=  250 평균= 83.33333333333333 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 사용자로부터 이름과 성적을 입력받아 총점과 평균을 구해 출력하는\n",
+    "# 프로그램을 작성하시오\n",
+    "name = input(\"이름를 입력하세요 : \")\n",
+    "kor = input(\"국어 점수를 입력하세요: \")\n",
+    "eng = input(\"영어 점수를 입력하세요: \")\n",
+    "math = input(\"수학 점수를 입력하세요: \")\n",
+    "\n",
+    "total = int(kor) + int(eng) + int(math)\n",
+    "avg = total / 3\n",
+    "\n",
+    "print(name, \"님의 총점= \", total, \"평균=\", avg, \"입니다.\")"
    ]
   },
   {
