--- a/04장 파일IO/ch04.ipynb
+++ b/04장 파일IO/ch04.ipynb
@@ -20,6 +20,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14은(는) 짝수입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_odd(number):\n",
+    "    if number % 2 == 1:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "n = 14\n",
+    "# print(is_odd(n))\n",
+    "if is_odd(n):\n",
+    "    print(f\"{n}은(는) 홀수입니다.\")\n",
+    "else:\n",
+    "    print(f\"{n}은(는) 짝수입니다.\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -29,6 +57,28 @@
     "    (단 입력으로 들어오는 수의 개수는 정해져 있지 않다.)\n",
     "    ※ 평균 값을 구할 때 len 함수를 사용해 보자.\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "평균 =  13.11\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_avg(args):\n",
+    "    return sum(args) / len(args)\n",
+    "    \n",
+    "data_in = 10.3, 12.1, 30, 3.14, 10\n",
+    "\n",
+    "print(\"평균 = \", round(get_avg(data_in),2)) # round______숫자는 소수점자릿수 지정"
    ]
   },
   {
@@ -70,6 +120,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you:need:python\n",
+      "you-need-python\n",
+      "['you', 'need', 'python']\n",
+      "<class 'list'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'python'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# print(\"you\" \"need\" \"python\")\n",
+    "# print(\"you\"+\"need\"+\"python\")\n",
+    "# print(\"you\", \"need\", \"python\")\n",
+    "\n",
+    "text = \":\".join([\"you\", \"need\", \"python\"])\n",
+    "print(text)\n",
+    "# text = \"you:need:python\" 문자열 상수\n",
+    "\n",
+    "new_text = text.replace(':','-') \n",
+    "# \"you-need-python\" 새롭게 생성만 되고 출력이 안되기 때문에 new_와 text.를 붙여줌\n",
+    "\n",
+    "print(new_text)\n",
+    "\n",
+    "splist = new_text.split('-')\n",
+    "print(splist)\n",
+    "print(type(splist))\n",
+    "splist[2]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -89,6 +185,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Life is too short\n"
+     ]
+    }
+   ],
+   "source": [
+    "try\":\n",
+    "f1 = open(\"test.txt\", 'w')\n",
+    "f1.write(\"Life is too short\")\n",
+    "\n",
+    "f1.cl\n",
+    "ose()\n",
+    "\n",
+    "f2 = open(\"test.txt\", 'r')\n",
+    "print(f2.read())\n",
+    "f2.close()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -97,6 +219,31 @@
     "    사용자의 입력을 파일(test.txt)에 저장하는 프로그램을 작성해 보자. \n",
     "    (단 프로그램을 다시 실행하더라도 기존에 작성한 내용을 유지하고 새로 입력한 내용을 추가해야 한다.)\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "안녕하세요\n",
+      "안녕안녕\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt = input(\"메시지를 입력해주세요: \")\n",
+    "# 기존 파일에 추가메세지 자정\n",
+    "with open(\"text.txt\",'a',encoding = 'utf-8') as fw:\n",
+    "    fw.write('\\n'+dt)\n",
+    "\n",
+    "with open(\"text.txt\",'r',encoding = 'utf-8') as fr:\n",
+    "    print(fr.read())"
    ]
   },
   {
@@ -112,6 +259,45 @@
     "    you need java\n",
     "    ※ replace 함수를 사용해 보자.\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"test.txt\", 'rt', encoding='utf-8') as fr:\n",
+    "    data = fr.read().replace(\"java\", \"python\")\n",
+    "with open(\"test.txt\",'wt', encoding='utf-8') as fw:\n",
+    "    fw.write(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 바이너리 파일 다루기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from urllib import request\n",
+    "\n",
+    "target = request.urlopen(\"https://item.kakaocdn.net/do/b5d3d6a7b67fbf5afdaffb79fffbf8b18f324a0b9c48f77dbce3a43bd11ce785\")\n",
+    "bin_file = target.read()\n",
+    "print(bin_file)\n",
+    "\n",
+    "with open(\"..\\\\source\\\\choonsik.jpg\",'wb')as f:\n",
+    "    f.write(bin_file)\n",
+    "    \n",
+    "# 절대경로말고 상대경로를 열어야함. 사람마다 PC가 다르기 때문에\n",
+    "# print(target)\n",
+    "# print(type(target))"
    ]
   }
  ],
