--- a/05장 모듈/ch05.ipynb
+++ b/05장 모듈/ch05.ipynb
@@ -228,6 +228,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "서초구 서초1동의 현재 온도는 현재 온도-2°입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 웹 페이지 분석 모듈\n",
+    "# 현재위치와 현재 온도 출력 프로그램\n",
+    "# 네이버 오늘의 날씨(https://weather.naver.com/today)\n",
+    "\n",
+    "from urllib import request\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "target = request.urlopen(\"https://weather.naver.com/today\")\n",
+    "soup = BeautifulSoup(target, \"html.parser\")\n",
+    "\n",
+    "data = soup.find('div',{'class':'location_area'})\n",
+    "address = data.find('strong',{'class':'location_name'}).text\n",
+    "# print(address)\n",
+    "\n",
+    "temp = soup.find('strong',{'class':'current minus'}).text.replace(\"현재온도\",\"\")\n",
+    "\n",
+    "print(\"{}의 현재 온도는 {}입니다.\".format(address, temp))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -236,17 +269,17 @@
     "# 현재위치와 현재 온도 출력\n",
     "# 네이버 오늘의 날씨(https://weather.naver.com/today)\n",
     "\n",
-    "from urllib import request\n",
-    "from bs4 import BeautifulSoup\n",
+    "# from urllib import request\n",
+    "# from bs4 import BeautifulSoup\n",
     "\n",
-    "target = request.urlopen('https://weather.naver.com/today')\n",
-    "soup = BeautifulSoup(target, \"html.parser\")\n",
+    "# target = request.urlopen('https://weather.naver.com/today')\n",
+    "# soup = BeautifulSoup(target, \"html.parser\")\n",
     "\n",
-    "data = soup.find('div', {'class':'location_area'})\n",
-    "address = data.find('strong', {'class':'location_name'}).text\n",
-    "temp = soup.find('strong', {'class':'current'}).get_text().replace(\"현재 온도\",\"\")\n",
+    "# data = soup.find('div', {'class':'location_area'})\n",
+    "# address = data.find('strong', {'class':'location_name'}).text\n",
+    "# temp = soup.find('strong', {'class':'current'}).get_text().replace(\"현재 온도\",\"\")\n",
     "\n",
-    "print(f\"오늘 {address}의 날씨는 {temp}입니다.\")"
+    "# print(f\"오늘 {address}의 날씨는 {temp}입니다.\")"
    ]
   }
  ],
@@ -260,7 +293,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.1"
   },
   "orig_nbformat": 4
